--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,5 @@
-<figure class="image">
+<figure class="image"><pre>
   <img src="{{ include.url }}" alt="{{ include.description }}">
   <figcaption>{{ include.description }}</figcaption>
+</pre>
 </figure>
