add suport for disqus, fix typos

--- a/_includes/console.html
+++ b/_includes/console.html
@@ -1,1 +1,1 @@
-<figure class="console-output"><pre>{{ include.content }}</pre></figure>
+<figure class="console-output"><pre class="console-output">{{ include.content }}</pre></figure>
