--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5938,3 +5938,13 @@ figure {
 	margin-top: 25px;
 }
 
+.table-grade-minus {
+  font-weight: bold;
+  color: #ff0000;
+  font-size: 1.2em;
+}
+.table-grade-plus {
+  font-weight: bold;
+  color: #00c800;
+  font-size: 1.2em;
+}
